// Copyright Â© 2016 The Things Network
// Use of this source code is governed by the MIT license that can be found in the LICENSE file.

syntax = "proto3";

import "github.com/TheThingsNetwork/ttn/api/api.proto";

package discovery;

message Metadata {
  enum Key {
    OTHER = 0;

    // The value for PREFIX consists of 1 byte denoting the number of bits,
    // followed by the prefix and enough trailing bits to fill 4 octets
    PREFIX = 1;

    // The value for APP_ID are the bytes of the AppID string
    APP_ID = 3;
  }
  Key key = 1;
  bytes value = 2;
}

message Announcement {
  string id = 1;
  string token = 2;
  string description = 3;
  string service_name = 4;
  string service_version = 5;
  string net_address = 11;
  repeated Metadata metadata = 21;
}

message DiscoverRequest {
  string service_name = 1;
}

message GetRequest {
  string service_name = 1;
  repeated string id = 2;
}

message DiscoverResponse {
  repeated Announcement services = 1;
}

service Discovery {
  rpc Announce(Announcement) returns (api.Ack);
  rpc Discover(DiscoverRequest) returns (DiscoverResponse);
  rpc Get(GetRequest) returns (DiscoverResponse);
}

// The DiscoveryManager service provides configuration and monitoring functionality
service DiscoveryManager {

}
